attached_assets/Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1735325884808.txt
-- Configuring done (0.1s)
-- Generating done (0.1s)
-- Build files have been written to: /home/runner/StreamCryptoDFS/build
[  9%] Built target dfs_crypto
[ 19%] Built target dfs_store
[ 33%] Built target dfs_network
[ 42%] Built target crypto_tests
[ 52%] Built target store_tests
[ 66%] Built target network_tests
[ 71%] Building CXX object CMakeFiles/codec_tests.dir/src/network/codec.cpp.o
/home/runner/StreamCryptoDFS/src/network/codec.cpp: In member function ‘std::size_t dfs::network::Codec::serialize(const dfs::network::MessageFrame&, std::ostream&)’:
/home/runner/StreamCryptoDFS/src/network/codec.cpp:40:44: error: cannot convert ‘const std::array<unsigned char, 16>’ to ‘const std::vector<unsigned char>&’
   40 |       crypto.initialize(crypto_key_, frame.initialization_vector);
      |                                      ~~~~~~^~~~~~~~~~~~~~~~~~~~~
      |                                            |
      |                                            const std::array<unsigned char, 16>
In file included from /home/runner/StreamCryptoDFS/src/network/codec.cpp:5:
/home/runner/StreamCryptoDFS/include/crypto/crypto_stream.hpp:31:82: note:   initializing argument 2 of ‘void dfs::crypto::CryptoStream::initialize(const std::vector<unsigned char>&, const std::vector<unsigned char>&)’
   31 | nitialize(const std::vector<uint8_t>& key, const std::vector<uint8_t>& iv);
      |                                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~

/home/runner/StreamCryptoDFS/src/network/codec.cpp: In member function ‘std::size_t dfs::network::Codec::deserialize(std::istream&, dfs::network::Channel&)’:
/home/runner/StreamCryptoDFS/src/network/codec.cpp:113:44: error: cannot convert ‘std::array<unsigned char, 16>’ to ‘const std::vector<unsigned char>&’
  113 |       crypto.initialize(crypto_key_, frame.initialization_vector);
      |                                      ~~~~~~^~~~~~~~~~~~~~~~~~~~~
      |                                            |
      |                                            std::array<unsigned char, 16>
/home/runner/StreamCryptoDFS/include/crypto/crypto_stream.hpp:31:82: note:   initializing argument 2 of ‘void dfs::crypto::CryptoStream::initialize(const std::vector<unsigned char>&, const std::vector<unsigned char>&)’
   31 | nitialize(const std::vector<uint8_t>& key, const std::vector<uint8_t>& iv);
      |                                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~

make[2]: *** [CMakeFiles/codec_tests.dir/build.make:90: CMakeFiles/codec_tests.dir/src/network/codec.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:257: CMakeFiles/codec_tests.dir/all] Error 2
make: *** [Makefile:146: all] Error 2